--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h4, h5, h6, p{
 }
 
 .maintext{
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding-bottom: 1.3rem;
 }
 
@@ -186,16 +186,7 @@ url(
 .header .heading{
     font-size: 3.8rem;
 }
-.header-image{
-        background-image: url('../images/header.jpg');
-        height: 300px;
-        background-repeat: no-repeat;
-        background-size:cover;
-        /* you need to match the shadow color to your background or image border for the desired effect*/
-        margin: 8rem 2rem 0 2rem ;
-        top: 10%;
-        border-radius: 5px;
-}
+
 
 
 hr{
@@ -218,9 +209,6 @@ hr{
     margin: 0 10% 0 auto ;
 
 }
-
-#ReadMore p{
-    font-weight: 300;}
 
 .about p{
     padding:0 0 2rem 0;
@@ -340,7 +328,6 @@ height: 100%;
 
 .mission-text {
     font-size: 90%;
-font-weight: 400;
 } 
 
 
@@ -630,6 +617,7 @@ font-weight: bold;
 
 /* Responsiveness */
 
+
 @media (min-width:768px){
     .mobile-only{
         display: none;
@@ -638,32 +626,45 @@ font-weight: bold;
     .web-only{
         display: block;}
 
-    body{padding-top: 6%;}
+    body{padding-top: 0%;
+    }
     .heading{
         font-size: 5rem;
         margin: 0 2rem 0 0;
         }
 
-    .header .heading-div{
-            margin: 8% 4rem auto 60%;
-        }
+    .heading-div{
+            margin: 8rem 10% 0 auto;
+  }
+
+  /* Header section */
 
     .header .heading{
-        font-size: 5.5rem;
-
+        font-size: 6vmax;
     }
-        .heading-div{
-            margin: 8rem 10% 0 auto;}
 
+    .header .heading-div{
+        margin: auto 8% auto 4rem;
+        z-index: 150;
+    }
+
+ 
+  .header .flex-box{
+      margin: 8% 0 0 4rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+  }
         .header-image{
+            width:100%;
+            height: 600px;
             background-image: url('../images/header.jpg');
-            width: 50%;
-            height: 35rem;
+            background-size: cover;
             background-repeat: no-repeat;
-            background-size:cover;
-            /* you need to match the shadow color to your background or image border for the desired effect*/
-            position: absolute;
-            left: 2rem;
+            overflow:hidden;
+            position: relative;
+
     }
 
     .navbar-brand{
