--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ body{
     text-align: center;
     background-color:black;
     color: white;
-    padding-top: 5%; /* For the sticky navbar */
 }
 
 html{
@@ -26,7 +25,7 @@ h4, h5, h6, p{
 }
 
 .maintext{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding-bottom: 1.3rem;
 }
 
@@ -75,6 +74,8 @@ h4, h5, h6, p{
     top: 180rem;
     right: 0px;
     width: 20%;
+
+    z-index: 0;
 }
 
 .device-box-cta{
@@ -83,6 +84,7 @@ h4, h5, h6, p{
     width: 30%;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+    z-index: 0;
 }
 
 /* State styling */
@@ -179,15 +181,26 @@ url(
 /* Title */
 
 .header .heading-div{
-    margin: 5rem 15% 0rem 2rem;
+    margin: 4rem 15% 0rem 2rem;
 
 }
 
 .header .heading{
-    font-size: 3.8rem;
+    font-size: 3.5rem;
 }
 
+.header .flex-box{
+    display: block;
 
+}
+.header-image{
+    width:100%;
+    height: 35vh;
+    background-image: url('../images/header.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 10rem;
+    }
 
 hr{
     width: 10rem;
@@ -260,7 +273,6 @@ display: flex;
     width: 8rem; 
     margin:  0 0;
     padding: 0 0;
-
 }
 
 
@@ -617,7 +629,7 @@ font-weight: bold;
 
 /* Responsiveness */
 
-
+/* Web */
 @media (min-width:768px){
     .mobile-only{
         display: none;
@@ -629,7 +641,7 @@ font-weight: bold;
     body{padding-top: 0%;
     }
     .heading{
-        font-size: 5rem;
+        font-size: 5vmax;
         margin: 0 2rem 0 0;
         }
 
@@ -645,38 +657,32 @@ font-weight: bold;
 
     .header .heading-div{
         margin: auto 8% auto 4rem;
-        z-index: 150;
     }
 
- 
-  .header .flex-box{
-      margin: 8% 0 0 4rem;
+    .header .flex-box{
+      margin: 10% 0 0 4rem;
       display: flex;
       align-items: center;
       justify-content: center;
-
-  }
-        .header-image{
-            width:100%;
-            height: 600px;
-            background-image: url('../images/header.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            overflow:hidden;
-            position: relative;
-
+    }
+    
+    .header-image{
+    width:100%;
+    height: 600px;
+    overflow:hidden;
+    margin-top: 0;
+    position: relative;
     }
 
     .navbar-brand{
-        width: 6rem;
-        margin: 0 0 0 2rem;
-        padding: 3rem 0;
+    width: 6rem;
+    margin: 0 0 0 2rem;
+    padding: 3rem 0;
     }
-    
 
     .shell{
-        text-align: left;
-        padding: 4rem 4rem;
+    text-align: left;
+    padding: 4rem 4rem;
     }
 
     .flex-box{
@@ -706,9 +712,16 @@ height:auto;
 
     }
 
+    .image-div{
+        position: relative; 
+        display:inline-block;
+        object-fit: contain;
+        width: 11rem;
+    }
+    .image{
+        width: 100%;
+    }
 
-
-   
 .team-div:hover .image{
     opacity: 0.2;
 }
@@ -723,17 +736,11 @@ height:auto;
         padding: 0 0 0 1rem;
     
     }
-    .image{
-        width: 10rem;
-        margin:  0 0;
-        padding: 0 0;
-    
-    }
-
 
     .team-div .job{
         position:absolute;
         z-index: 10;
+        width: 100%;
         padding:  0 2rem;
         opacity: 0;
         top: 50%;
@@ -743,10 +750,7 @@ height:auto;
         margin: 0 auto;
     }
 
-    .image-div{
-        position: relative; 
-        display:inline-block;
-    }
+
     .mission-div{
         margin: 0 0;
         padding: 0 0;
@@ -827,8 +831,6 @@ font-size: 1rem;}
 .find-us h3{
 font-size: 1.8rem;}
 .redirect{margin-top: 5rem;}
-
-
 }
 
 
@@ -840,3 +842,5 @@ font-size: 1.8rem;}
     -o-animation: fadeIn ease 3s;
     -ms-animation: fadeIn ease 3s;
   }
+
+
