--- a/css/styles.css
+++ b/css/styles.css
@@ -532,7 +532,7 @@ padding: 3rem 0rem;
     width: 100%;
     margin-bottom: 0rem;
     padding-bottom: 0;
-    padding-top: 15vh;
+    padding-top: 10%;
 }
 
 .form .heading{
@@ -549,7 +549,7 @@ font-size: 80%;
 }
 .form a{
     margin: 0 0.5rem;
-    color: white;
+    color: gray;
 }
 
 .form a:hover{
@@ -562,10 +562,11 @@ font-size: 80%;
     margin: 0 0;
 }
 
-
+.redirect .heading{
+    margin-top: 5rem;
+}
 /* Redirect and Welcome Page */
 
-.redirect{margin-top: 8rem;}
 
 .redirect-link{
     font-size: 0.8rem;
@@ -640,7 +641,7 @@ font-weight: bold;
     .web-only{
         display: block;}
 
-    body{padding-top: 0%;
+    body{padding-top: 10%;
     }
     .heading{
         font-size: 5vmax;
@@ -654,7 +655,7 @@ font-weight: bold;
   /* Header section */
 
     .header .heading{
-        font-size: 6vmax;
+        font-size: 6.5vmax;
     }
 
     .header .heading-div{
@@ -662,7 +663,7 @@ font-weight: bold;
     }
 
     .header .flex-box{
-      margin: 10% 0 0 4rem;
+      margin: 0 0 0 4rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -806,17 +807,7 @@ margin-bottom: 3rem;
 }
 
 .form-group .subparagraph{
-font-weight: 400;    
 font-size: 1rem;}
-
-.form a{
-    margin: 0 0.5rem;
-    color: white;
-}
-
-.form a:hover{
-    color: #FF6700;
-}
 
 
 .popup-button .popup-text {
