--- a/css/styles.css
+++ b/css/styles.css
@@ -311,11 +311,12 @@ display: flex;
 }
 
 .mission-icon  {
+    height: auto;
 float: left;    
-width: 4rem;
+min-width: 4rem;
+max-width: 4rem;
 vertical-align: middle;
 margin: 1rem 2rem 2rem 0;
-height: 100%;
 }
 
 .obj-icon{
@@ -532,7 +533,7 @@ padding: 3rem 0rem;
     width: 100%;
     margin-bottom: 0rem;
     padding-bottom: 0;
-    padding-top: 10%;
+    padding-top: 20%;
 }
 
 .form .heading{
@@ -639,8 +640,7 @@ font-weight: bold;
     .web-only{
         display: block;}
 
-    body{padding-top: 10%;
-    }
+
     .heading{
         font-size: 5rem;
         margin: 0 2rem 0 0;
@@ -661,7 +661,7 @@ font-weight: bold;
     }
 
     .header .flex-box{
-      margin: 0 0 0 4rem;
+      margin: 10% 0 0 4rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -801,6 +801,7 @@ height:auto;
 .form .heading{
     margin-top: 5rem;
 }
+
 .form-group .paragraph{
 margin-bottom: 3rem;
 }
