Updates css file for new donate button styling

--- a/css/styles_06.css
+++ b/css/styles_06.css
@@ -273,6 +273,15 @@ hr{
     color: #FF6700;
 }
 
+.donate-btn{
+    background-color: black;
+    border-color: white;
+    border: solid 1pt;
+}
+
+.donate-btn:hover{
+    background-color: white;
+}
 #ReadMore{
     display: none;
 }
