--- a/css/styles_10.css
+++ b/css/styles_10.css
@@ -593,9 +593,11 @@ padding: 3rem 0rem;
     font-size: 0.6rem;
 }
 
-.footer .hyperlink{
+.footer a{
     color:white
 }
+
+
 
 /* Join Us Page */
 
