--- a/css/styles_10.css
+++ b/css/styles_10.css
@@ -703,7 +703,7 @@ color: #FF6700;
 font-weight: bold;
 }
 
-/* Event Page */
+/* Event Pages */
 
 .event .heading{
     margin-top: 5rem;
@@ -739,6 +739,11 @@ font-weight: bold;
 #rp2023 ul{
  list-style-position: outside;
 }
+
+#rp2023 .img-responsive{
+    margin-bottom: 5%;
+   }
+   
 
 #faqs .btn{
     padding-left:0;
@@ -967,7 +972,15 @@ font-size: 1.8rem;}
     margin-left: 50rem;
 
  }
+
+ #rp2023 .img-responsive{
+    margin-bottom: 0%;
+   }
   
+
+#rp2023 .img-rocket{
+    margin-bottom: 5%;
+}
  #rp2023 .header .img-fluid{
      max-height: 800px;
      padding-top: 5%;
@@ -981,8 +994,14 @@ font-size: 1.8rem;}
 
 
 #rp2023 .d-flex{
-padding: 5% 20%;
+padding: 5% 15%;
 }
+
+#rp2023 .img-div{
+   padding-bottom: 5%;
+   width: 50rem;
+    }
+    
 
 #faqs .btn{
     text-align: center;
